<resources>
    <string name="app_name">HuSchKa</string>

    <string name="login">Login!</string>
    <string name="register">Registrieren!</string>
    <string name="no_account">Kein Account? Hier entlang</string>
    <string name="exist_account">Account vorhanden? Hier entlang</string>
    <string name="register_Vorname">Vorname</string>
    <string name="register_Nachname">Nachname</string>
    <string name="register_Stadt">Stadt</string>
    <string name="register_Postleitzahl">Postleitzahl</string>
    <string name="register_Straße">Straße</string>
    <string name="register_Hausnummer">Nr.</string>
    <string name="register_Email">E-Mail</string>
    <string name="register_Passwort">Passwort</string>
    <string name="register_Passwort_Wiederholen">Passwort wiederholen</string>
    <string name="login_Begrueßung">Willkommen bei HuSchKa! Ihrem Einkaufsplaner</string>
    <string name="login_Email">Email</string>
    <string name="login_Passwort">Passwort</string>

    <string name="register_ueberschrift">Konto erstellen</string>

    <string name="einkaufslistenActivityToolbar">Einkaufsliste</string>


    <string name="addList_Infos">Hinzufügen</string>
    <string name="finish">Fertig!</string>

    <string name="ListeHinzufügen_Bitte">Bitte Supermarkt auswählen</string>

    <string name="ListeHinzufügen_Datum">Bitte Einkaufsdatum auswählen</string>
    <string-array name="Supermarkts">
        <item>Kaufland</item>
        <item>Rewe</item>
        <item>Lidl</item>
        <item>Aldi</item>
        <item>Edeka</item>
    </string-array>


    <string name="shoppinglist_ListenID">ListenID:</string>
    <string name="shoppinglist_Supermarkt">Supermarkt:</string>
    <string name="shoppinglist_Datum">Einkaufsdatum:</string>
    <string name="shoppinglist_Produkte">Produkte</string>
    <string name="shoppinglist_Starten">Einkauf starten</string>
    <string name="shoppinglist_Loeschen">Einkaufsliste löschen</string>

    <string-array name="Anzahl">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

    <string name="Produktinfo_Hersteller">Hersteller</string>
    <string name="Produktinfo_Produktname">Produktname</string>
    <string name="Produktinfo_Kategorie">Kategorie</string>
    <string name="Produktinfo_Preis">Preis in €</string>
    <string name="Produktinfo_Kcal">Kcal je 100g</string>
    <string name="Produktinfo_Ernaehrungsform">Ernährungsform</string>
    <string name="Produktinfo_GesundheitsScore">Gesundheits-Score</string>
    <string name="Produktinfo_UmweltScore">Umwelt-Score</string>


    <string-array name="Tipps">
        <item>HuSchKa nutzen!!!</item>
        <item>Unnötigen Zusatzstoffen meiden</item>
        <item>Auf die Scores achten!</item>
        <item>Um so höher der Score - um so besser!</item>
        <item>Lies die Etiketten, bevor du etwas blind kaufst</item>
        <item>Greife zu gesunden Fetten</item>
        <item>Halte dich von der Süßwarenabteilung fern</item>
        <item>Frischfleisch ist King</item>
        <item>Lass dich an der Kasse zu nichts verführen</item>
        <item>Kaufe unbehandelte Kohlenhydrate</item>
        <item>Kaufe unbehandelte Kohlenhydrate</item>
        <item>Bio ist nicht alles</item>
        <item>Halte dich an deinen Einkaufszettel</item>
        <item>Vorher satt essen</item>
        <item>Auch mal die Kinder Zuhause lassen</item>
        <item>Preise vergleichen</item>
        <item>Keine Plastiktüten</item>
        <item>Morgens einkaufen gehen</item>
        <item>Nicht blenden lassen von Angeboten</item>
        <item>Saisonal einkaufen</item>
        <item>Richtige Korbgröße wählen</item>
        <item>Preise vergleichen</item>
        <item>Tiefkühlkost ist besser als ihr Ruf</item>
    </string-array>


    <string name="nameHomeScreen">Home</string>
    <string name="ListenScreen">Einkaufslisten</string>
    <string name="ProduktScreen">Produktsuche</string>
    <string name="produktInfo">Produktinfo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Passwort_aendern">Altes Passwort</string>
    <string name="Passwort_aendern_neu">Neues Passwort</string>
    <string name="Passwort_aendern_neu2">Neues Passwort wiederholen</string>

</resources>