<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddShoppingListActivity">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addListToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    <TextView
        android:id="@+id/TV_ListeHinzufügen_BitteWaehlen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="530dp"
        android:text="@string/ListeHinzufügen_Bitte"
        android:textColor="@color/colorDunkelTuerkis"
        android:textSize="20dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/TV_ListeHinzufügen_Datum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="360dp"
        android:text="@string/ListeHinzufügen_Datum"
        android:textColor="@color/colorDunkelTuerkis"
        android:textSize="20dp"
        android:textAlignment="center"/>

    <Spinner
        android:id="@+id/dropdownList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="450dp"
        android:background="@color/colorDunkelTuerkis"
        android:textAlignment="center"
        android:popupBackground="@color/colorDunkelTuerkis" />

    <DatePicker
        android:id="@+id/datepickerList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="130dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />

    <Button
        android:id="@+id/btnAddList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:text="@string/addList_Infos"
        android:background="@color/colorDunkelTuerkis"
        android:textColor="@color/colorSehrDunkelTuerkis"/>

</RelativeLayout>