<?xml version="1.0" encoding="utf-8"?>
<!--    Layout für die Activity für die Übersicht des Accounts.
        Zugehörige Klasse: /Activities/AccountActivity -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:text="Passwort ändern"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textColor="@color/colorWeiß"
        android:background="@color/colorDunkelTuerkis"/>

    <TextView
        android:id="@+id/TV_Passwort_Alt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/Passwort_Alt"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="50dp"
        android:text="Altes Passwort eingeben:"
        android:textColor="@color/colorDunkelTuerkis"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/TV_Passwort_Neu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/Passwort_Neu"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="50dp"
        android:text="Neues Passwort eingeben:"
        android:textColor="@color/colorDunkelTuerkis"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/TV_Passwort_Neu2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/Passwort_Neu2"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="50dp"
        android:text="Neues Passwort wiederholen:"
        android:textColor="@color/colorDunkelTuerkis"
        android:textSize="18dp" />



    <Button
        android:id="@+id/BTN_Password_Speichern"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="220dp"
        android:layout_marginTop="550dp"
        android:text="Speichern"
        android:textColor="@color/colorWeiß"
        android:background="@color/colorDunkelTuerkis"/>

    <Button
        android:id="@+id/BTN_Passswort_Abbrechen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="220dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="550dp"
        android:text="Abbrechen"
        android:textColor="@color/colorDunkelTuerkis"
        android:background="@drawable/rahmen_nicht_ganz_dunkel"/>

    <Button
        android:id="@+id/BTN_PasswortChange_anzeigen"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="465dp"
        android:background="@color/colorWeiß"
        android:text="Anzeigen"
        android:textColor="@color/colorDunkelTuerkis" />



    <EditText
        android:id="@+id/Passwort_Alt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="170dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:hint="@string/Passwort_aendern"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/Passwort_Neu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="90dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="270dp"
        android:hint="@string/Passwort_aendern_neu"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/Passwort_Neu2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="90dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="390dp"
        android:hint="@string/Passwort_aendern_neu2"
        android:inputType="textPassword" />

</RelativeLayout>
